k8s/microservices/31-trip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trip-service
  namespace: zako-ms
spec:
  selector:
    app: trip-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-service
  namespace: zako-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip-service
  template:
    metadata:
      labels:
        app: trip-service
    spec:
      containers:
        - name: trip-service
          image: zako/trip-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 30
          resources:
            requests:
              cpu: "150m"
              memory: "320Mi"
            limits:
              cpu: "750m"
              memory: "640Mi"
