k8s/microservices/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zako-ms
  namespace: zako-ms
spec:
  ingressClassName: nginx
  rules:
    - host: zako-ms.localhost
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /api/tickets
            pathType: Prefix
            backend:
              service:
                name: ticket-service
                port:
                  number: 8083
          - path: /api/stations
            pathType: Prefix
            backend:
              service:
                name: trip-service
                port:
                  number: 8082
          - path: /api/trips
            pathType: Prefix
            backend:
              service:
                name: trip-service
                port:
                  number: 8082
          - path: /api/trains
            pathType: Prefix
            backend:
              service:
                name: trip-service
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
